--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,16 @@ header {
     color: #ffffff;
 }
 
+.nav li a {
+    color: #ffffff; /* Same color as the homepage */
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.nav li a:hover {
+    color: var(--primary); /* Use the primary color variable for hover */
+}
+
 .nav li:hover  {
     color: var(--primary);
 }
@@ -250,4 +260,109 @@ header {
     cursor: pointer !important;
 }
 
+/*FOR BOOKING SECTION*/
 
+/* Container for the bookings section */
+.bookings-banner {
+    position: relative;
+    width: 100%;
+    min-height: 180px;
+    color: #ffffff;
+    text-align: center;
+    padding: 40px 20px;
+    margin: 50px auto;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px);
+    max-width: 800px;
+}
+
+.bookings-banner-title {
+    font-size: 2.2em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.bookings-banner-description {
+    font-size: 1.1em;
+    font-weight: 300;
+    color: #dddddd;
+    margin: 0;
+    opacity: 0.9;
+}
+
+/* Bookings Container */
+.bookings-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+/* Card Styles */
+.card {
+    border-radius: 10px;
+    overflow: hidden;
+    background: #222;
+    transition: transform 0.3s;
+    max-width: 300px;
+    min-height: 400px;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+/* Card Image */
+.card-image img {
+    width: 100%;
+    height: auto;
+}
+
+/* Card Content */
+.card-content {
+    color: #dddddd;
+    padding: 10px;
+}
+
+/* Card Title */
+.card-title {
+    padding: 10px;
+    font-size: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    text-align: left;
+}
+
+/* Media Queries for Containers*/
+@media (max-width: 768px) {
+    .bookings-container {
+        grid-template-columns: 1fr;
+    }
+    .card {
+        max-width: 90%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1200px) {
+    .bookings-container {
+        gap: 30px;
+    }
+    .card {
+        max-width: 280px;
+        min-height: 380px;
+        margin: 15px;
+    }
+}
+
+@media (min-width: 1600px) {
+    .bookings-container {
+        gap: 40px;
+    }
+    .card {
+        max-width: 300px;
+        min-height: 400px;
+        margin: 20px;
+    }
+}
