modified landing and booking page

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background: #000000; 
+    background: #202124; 
     font-family: 'Poppins', 'sans serif';
 }
 
@@ -309,6 +309,10 @@ header {
     min-height: 400px;
 }
 
+.red-color {
+    background-color: #e50914;
+}
+
 .card:hover {
     transform: scale(1.05);
 }
@@ -334,6 +338,10 @@ header {
     text-align: left;
 }
 
+.page-footer {
+    background-color: #000000;
+}
+
 /* Media Queries for Containers*/
 @media (max-width: 768px) {
     .bookings-container {
@@ -351,18 +359,6 @@ header {
     }
     .card {
         max-width: 280px;
-        min-height: 380px;
-        margin: 15px;
-    }
-}
-
-@media (min-width: 1600px) {
-    .bookings-container {
-        gap: 40px;
-    }
-    .card {
-        max-width: 300px;
-        min-height: 400px;
-        margin: 20px;
+        min-height: 380px;@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     }
 }
