--- a/css/main.css
+++ b/css/main.css
@@ -15,84 +15,6 @@ body {
     font-family: 'Poppins', 'sans serif';
 }
 
-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 100px;
-    z-index: 10;
-}
-
-.logo {
-    font-size: 40px;
-    color: #e50914;
-    letter-spacing: 1px;
-    font-weight: 800;
-}
-
-.nav {
-    display: flex;
-}
-
-.nav li {
-    list-style: none;
-    margin: 0 18px;
-    cursor: pointer;
-    color: #ffffff;
-}
-
-.nav li a {
-    color: #ffffff; /* Same color as the homepage */
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-.nav li a:hover {
-    color: var(--primary); /* Use the primary color variable for hover */
-}
-
-.nav li:hover  {
-    color: var(--primary);
-}
-
-.search {
-    position: relative;
-    width: 300px;
-    height: 40px;
-}
-
-.search input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    color: #ffffff;
-    background-color: transparent;
-    border: 1 solid rgba(255, 255, 255, 0.5);
-    outline: none;
-    border-radius: 4px;
-    padding: 0 10px 0 45px !important;
-    backdrop-filter: blur(10px);
-}
-
-.search input::placeholder {
-    color: #ffffff;
-}
-
-.search i {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10px;
-    padding-right: 10px;
-    color: #ffffff;
-    border-right: 1px solid #ffffff;
-}
 
 .banner {
     position: relative;
@@ -270,7 +192,7 @@ header {
     color: #ffffff;
     text-align: center;
     padding: 40px 20px;
-    margin: 50px auto;
+    margin: 130px auto 40px auto; 
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
