--- a/css/movie-viewer.css
+++ b/css/movie-viewer.css
@@ -28,7 +28,7 @@
 
 body {
     background: var(--main-background-color);
-    margin-top: 225px;
+    margin-top: 130px;
 }
 
 /* BOOKING PAGE===============================*/
@@ -51,7 +51,7 @@ body {
 }
 
 .cinema-seating .title{
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 600;
     margin-bottom: 5px;
 }
@@ -124,6 +124,7 @@ body {
     background-color: var(--cinema-container-color);
     z-index: 1000;
     padding: 30px;
+    box-shadow: 0 5px 8px #02020257;
 }
 
 .cinema-number{
@@ -132,9 +133,6 @@ body {
     margin-bottom: 10px;
 }
 
-.timeslots-container{
-    padding: 20px;
-}
 
 .timeslots-content {
     display: flex;
@@ -159,6 +157,7 @@ body {
 }
 
 .sidepage-text, .sidepage-margin-text{
+    font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
     display: inline-block;
@@ -172,12 +171,21 @@ body {
     text-align: center;
 }
 
-#selectedSeatDisplay{
-    background: var(--cinema-container-lighter-color);
-    padding: 5px;
-    border-radius: 10px;
+.date-select {
+    display: flex;
+    width: 100%;
+    padding: 8px;
+    border-radius: 40px;
     border: 2px solid #333;
-    color: #d1cdcd;
+    background: var(--cinema-container-darker-color);
+    font-size: 16px;
+}
+
+#selectedSeatDisplay, .price-textcontent{
+    padding: 5px;
+    border-radius: 40px;
+    border: 2px solid #333;
+    background: var(--cinema-container-darker-color);
 }
 
 .sidepage-summary{
@@ -186,7 +194,13 @@ body {
 }
 
 .sidepage-summary .availableSeats, .sidepage-summary .totalSeats{
-    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    margin-bottom: 20px;
+    border-radius: 40px;
+    border: 2px solid #333;
+    background: var(--cinema-container-darker-color);
 }
 
 /*Seat Tab==============================*/
@@ -236,6 +250,7 @@ body {
 
 .selectedSeats, .availableSeats, .totalSeats{
     color: var(--light-text-color);
+    font-size: 15px;
 }
 
 .cinema-details .cinema-content label {
@@ -253,7 +268,7 @@ body {
     display: fixed;
     border-radius: 21px;
     background-color: var(--cinema-container-color);
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 25px;
     overflow: hidden;
 }
@@ -315,11 +330,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px auto;
-    padding: 5px;
+    margin: 20px auto 0 auto;
+    padding: 10px;
     border: none;
     border-radius: 65px;
-    width: 70%;
+    width: 85%;
     color: var(--light-text-color);
     background-color: var(--btn-color-1);
 }
