--- a/css/main.css
+++ b/css/main.css
@@ -188,20 +188,22 @@ body {
 .bookings-banner {
     position: relative;
     width: 100%;
-    min-height: 180px;
+    min-height: 100px;
     color: #ffffff;
     text-align: center;
-    padding: 40px 20px;
-    margin: 130px auto 40px auto; 
+    padding: 30px 20px;
+    margin: 60px auto;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
     max-width: 800px;
+    margin-top: 120px;
 }
 
 .bookings-banner-title {
     font-size: 2.2em;
     font-weight: 600;
+    margin-top: 5px;
     margin-bottom: 10px;
 }
 
@@ -218,7 +220,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
-    padding: 20px;
+    padding: 20px 20px 60px;
 }
 
 /* Card Styles */
@@ -227,8 +229,11 @@ body {
     overflow: hidden;
     background: #222;
     transition: transform 0.3s;
-    max-width: 300px;
-    min-height: 400px;
+    width: 100%;
+    height: 100%;
+    max-width: 250px;
+    min-height: 380px;
+    box-sizing: border-box;
 }
 
 .red-color {
@@ -249,6 +254,13 @@ body {
 .card-content {
     color: #dddddd;
     padding: 10px;
+}
+
+/* Card Action (Manage Ticket Button) */
+.card-action {
+    display: flex;
+    justify-content: center;
+    margin-top: -20px;
 }
 
 /* Card Title */
