added profile page + fixed cinema image

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -285,8 +284,6 @@ main.login-container {
     background-color: #ffffff;
     border-radius: 3.3rem;
     box-shadow: 0 60px 40px -30px rgba(255, 255, 255, 0.27);
-
-
     }
 .inner-box{
     position: absolute;
@@ -342,6 +339,15 @@ form.sign-up-form {
     color: #e50914;
     letter-spacing: 1px;
     font-weight: 800;
+}
+
+.fa-solid {
+    color: #151111;
+    margin-left: 16rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    top: 0;
+    position: absolute;
 }
 
 .heading h2 {
@@ -587,6 +593,11 @@ main.sign-up-mode .login-carousel {
         transform: translateX(0%);
     }
 
+    .fa-solid{
+        margin-left: 28rem;
+        margin-top: 1rem;
+    }
+
     form{
         max-width: revert;
         padding: 1.5rem 2.5rem 2rem;
@@ -634,6 +645,11 @@ main.sign-up-mode .login-carousel {
 
     .text-group h2{
         font-size: 1.2rem;
+    }
+
+    .fa-solid{
+        margin-left: 27rem;
+        margin-top: 1rem;
     }
 
     form{
