--- a/css/profile.css
+++ b/css/profile.css
@@ -14,6 +14,7 @@ body{
 
 .wrapper{
   position: absolute;
+  margin-top: 3rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
@@ -45,11 +46,13 @@ body{
 }
 
 .wrapper .left h4{
+  font-weight: 400;
   margin-bottom: 10px;
 }
 
-.wrapper .left p{
-  font-size: 12px;
+.wrapper .left h3{
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .wrapper .right{
@@ -85,12 +88,12 @@ body{
 .wrapper .right .info_data .data h4{
     color: #353c4e;
     margin-bottom: 5px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     white-space: nowrap;
 }
 
 .wrapper .right .info_data .data p{
-  font-size: 20px;
+  font-size: 18px;
   margin-bottom: 10px;
   color: #919aa3;
 }
