--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,12 @@ body {
 /* Media Queries for Containers*/
 @media (max-width: 768px) {
     .bookings-container {
-        grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+        gap: 20px;
+        padding: 20px 100px 60px;
+        margin: 200px 100px auto 100px;
+        max-width: 100%;
     }
     .card {
         max-width: 90%;
