--- a/css/main.css
+++ b/css/main.css
@@ -189,9 +189,11 @@ body {
 /* Bookings Container */
 .bookings-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
     gap: 20px;
-    padding: 20px 20px 60px;
+    padding: 20px 100px 60px;
+    margin: 200px 100px auto 100px;
+    max-width: 100%;
 }
 
 /* Card Styles */
@@ -246,13 +248,9 @@ body {
 /* Media Queries for Containers*/
 @media (max-width: 768px) {
     .bookings-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
-        gap: 20px;
-        padding: 20px 100px 60px;
-        margin: 200px 100px auto 100px;
-        max-width: 100%;
+        grid-template-columns: 1fr;
     }
+    
     .card {
         max-width: 90%;
         margin: 0 auto;
