--- a/css/movie-viewer.css
+++ b/css/movie-viewer.css
@@ -331,13 +331,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 45px auto 10px auto;
+    margin-bottom: 10px;
     padding: 10px;
     border: none;
     border-radius: 65px;
     width: 85%;
     color: var(--light-text-color);
-    background-color: var(--btn-color-1);
+    background: radial-gradient(circle at 10% 20%, rgb(221, 49, 49) 0%, rgb(119, 0, 0) 90%);
     font-weight: 700;
 }
 
@@ -353,4 +353,87 @@ body {
     cursor: pointer;
 }
 
+/* CAMERA STYLES ======================================================================*/
+.openCamerabtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 45px auto 5px auto;
+    padding: 10px;
+    border: none;
+    width: 85%;
+    color: var(--light-text-color);
+    background-color: var(--cinema-container-color);
+    text-decoration: underline;
+    font-weight: 700;
+    cursor: pointer;
+}
 
+/* MODAL STYLES ========================================================================*/
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 150px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #202124;
+    padding: 20px;
+    height: 650px;
+    width: 1500px;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 3.3rem;
+}
+
+.media-container {
+    display: flex;
+}
+
+
+.canvas-container, video{
+    margin: 0 auto;
+    text-align: center;
+    background: rgb(212, 199, 199); 
+    height: 480px;
+}
+
+video {
+    border: 2px solid #ccc;
+}
+
+canvas {
+    display: flex;
+    width: 640px;
+    height: 480px;
+    border: 2px solid #ccc;
+}
+
+#capture {
+    margin: 20px auto 20px auto;
+    display: block;
+    background: radial-gradient(circle at 10% 20%, rgb(221, 49, 49) 0%, rgb(119, 0, 0) 90%);
+    padding: 10px 20px;
+    border-radius: 45px;
+}
